--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.5",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
+    "fontawesome": "^5.6.3",
+    "fortawesome": "^0.0.1-security",
     "lucide-react": "^0.488.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.4",
