--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "clsx": "^2.1.1",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.488.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-i18next": "^15.6.1",
+    "react-router-dom": "^7.5.0",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
